# Copywraith

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  API.md  ARCHITECTURE.md  CICD.md  Cargo.toml  ENCRYPTION.md  IMPLEMENTATION.md  README.android.md  README.kde.md  README.mac.md  README.md  SENSITIVE.md  awesome.md  docker-compose.yml  package-lock.json  package.json  sol.md  tsconfig.json  update.sh  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
copywraith-data/: README.md
crates/copywraith-core/: Cargo.toml
crates/copywraith-core/src/: api_types.rs  content.rs  lib.rs  models.rs  sensitive.rs
crates/copywraith-share-target/: Cargo.toml  build.rs
crates/copywraith-share-target/android/: build.gradle.kts
crates/copywraith-share-target/android/src/main/: AndroidManifest.xml
crates/copywraith-share-target/android/src/main/aidl/ch/lkmc/copywraith/share/: IShizukuClipboardCallback.aidl  IShizukuClipboardService.aidl
crates/copywraith-share-target/android/src/main/java/: CopywraithSharePlugin.kt  ShizukuClipboardService.kt
crates/copywraith-share-target/permissions/autogenerated/: reference.md
crates/copywraith-share-target/permissions/autogenerated/commands/: collectPendingShare.toml  readShizukuClipboard.toml  shizukuStatus.toml  startShizukuClipboardListener.toml  stopShizukuClipboardListener.toml
crates/copywraith-share-target/permissions/schemas/: schema.json
crates/copywraith-share-target/src/: lib.rs
media-sources/: background.af  icon.af
memory/: AGENTS.md
scripts/: android-dev-bootstrap.sh  android-env-persist.sh  android-release-bootstrap.sh  check-release-version.mjs  redeploy-server-docker.sh  release.sh  sync-version.sh
server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/src/: admin.html  api.rs  crypto.rs  main.rs  search.rs  storage.rs
server/ui/: index.html  package-lock.json  package.json  vite.config.js
server/ui/src/: App.svelte  app.css  main.js
server/ui/src/lib/: EntryDetail.svelte  EntryRow.svelte  api.ts  types.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  linux.rs  main.rs  models.rs  paste.rs  storage.rs  sync.rs
src/lib/: tauri.ts  types.ts  windowManager.ts
src/lib/components/: EntryList.svelte  EntryPreview.svelte  EntryRow.svelte  FilterBar.svelte  SettingsDialog.svelte  StatusBar.svelte
src/lib/util/: clipboardStore.ts  notifications.ts  platform.ts  syncStatusStore.ts
src/routes/: +layout.svelte  +page.svelte
