[workspace]
members = ["crates/copywraith-core", "crates/copywraith-share-target", "server", "src-tauri"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
ulid = { version = "1", features = ["serde"] }
base64 = "0.22"
rand = "0.9"
