[package]
name = "copywraith-server"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "copywraith-server"
path = "src/main.rs"

[dependencies]
copywraith-core = { path = "../crates/copywraith-core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
aes-gcm = "0.11"
hkdf = "0.13"
rand = { workspace = true }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

[dev-dependencies]
tempfile = "3"
