[package]
name = "copywraith-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "copywraith_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
copywraith-core = { path = "../crates/copywraith-core" }
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
env_logger = "0.11"
enigo = "0.3"
