[package]
name = "copywraith-tauri"
version = "0.2.0"
edition = "2021"

[lib]
name = "copywraith_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
cargo-clippy = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
copywraith-core = { path = "../crates/copywraith-core" }
copywraith-share-target = { path = "../crates/copywraith-share-target" }
tauri = { version = "2", features = ["tray-icon"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
env_logger = "0.11"

# Desktop-only: clipboard monitoring, global shortcuts, paste simulation
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard = "2"
clipboard-rs = "0.3.5"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

# Android: official clipboard manager (read/write text)
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-clipboard-manager = "2"
