[package]
name = "copywraith-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
utoipa = { version = "5", features = ["chrono"] }
