[package]
name = "copywraith-share-target"
version = "0.2.0"
edition = "2021"
links = "copywraith-share-target"
build = "build.rs"

[lib]
name = "copywraith_share_target"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
tauri = { version = "2", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2.6", features = ["build"] }
